Update translations from Transifex.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 # Please don't update this file manually - use ./update-potfiles.sh instead!
 src/aac-raw/aac.cc
 src/adplug/adplug-xmms.cc
+src/adplug/core/rix.cc
 src/adplug/core/rix.h
 src/alarm/alarm.cc
 src/alarm/interface.cc
@@ -128,6 +129,7 @@ src/notify/osd.cc
 src/oss4/oss.h
 src/oss4/plugin.cc
 src/playlist-manager/playlist-manager.cc
+src/playlist-manager-qt/playlist-manager-qt.cc
 src/pls/pls.cc
 src/psf/plugin.cc
 src/psf/psx.h
@@ -139,33 +141,44 @@ src/qtui/main_window_actions.cc
 src/qtui/main_window.cc
 src/qtui/playlist_model.cc
 src/qtui/qtui.cc
+src/qtui/settings.cc
 src/qtui/status_bar.cc
 src/resample/resample.cc
 src/scrobbler2/config_window.cc
 src/scrobbler2/scrobbler.cc
 src/scrobbler2/scrobbler_communication.cc
 src/sdlout/sdlout.cc
+src/search-tool-qt/search-tool-qt.cc
 src/search-tool/search-tool.cc
 src/sid/xmms-sid.cc
 src/sid/xs_config.cc
 src/silence-removal/silence-removal.cc
+src/skins/actions.cc
+src/skins/equalizer.cc
+src/skins/main.cc
 src/skins/menus.cc
+src/skins/playlist.cc
+src/skins/playlist-widget.cc
 src/skins/plugin.cc
-src/skins/preset-browser.cc
-src/skins/preset-list.cc
+src/skins-qt/actions.cc
+src/skins-qt/equalizer.cc
+src/skins-qt/main.cc
+src/skins-qt/menus.cc
+src/skins-qt/playlist.cc
+src/skins-qt/playlist-widget.cc
+src/skins-qt/plugin.cc
+src/skins-qt/skins_cfg.cc
+src/skins-qt/skinselector.cc
+src/skins/search-select.cc
 src/skins/skins_cfg.cc
-src/skins/ui_equalizer.cc
-src/skins/ui_main.cc
-src/skins/ui_main_evlisteners.cc
-src/skins/ui_playlist.cc
-src/skins/ui_skinselector.cc
-src/skins/util.cc
+src/skins/skinselector.cc
 src/sndfile/plugin.cc
 src/sndio-ng/sndio.cc
 src/song_change/song_change.cc
 src/song-info-qt/song-info.cc
 src/sox-resampler/sox-resampler.cc
 src/speed-pitch/speed-pitch.cc
+src/statusicon-qt/statusicon.cc
 src/statusicon/statusicon.cc
 src/stereo_plugin/stereo.cc
 src/tonegen/tonegen.cc
