--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ dnl ***
 dnl Initialize
 dnl ==========
 AC_PREREQ([2.59])
-AC_INIT([audacious-plugins], [3.7-beta1])
+AC_INIT([audacious-plugins], [3.7])
 AC_COPYRIGHT([Copyright (C) 2001-2015 Audacious developers and others])
 
 AC_DEFINE_UNQUOTED([PACKAGE], "$PACKAGE_NAME", [Name of package])
@@ -31,9 +31,9 @@ LIBS="$LIBS $LIBINTL"
 dnl Check for Audacious
 dnl ===================
 
-PKG_CHECK_MODULES(AUDACIOUS, [audacious >= 3.6],
+PKG_CHECK_MODULES(AUDACIOUS, [audacious >= 3.7],
     [],
-    [AC_MSG_ERROR([Cannot find Audacious 3.6; have you installed Audacious yet?])]
+    [AC_MSG_ERROR([Cannot find Audacious 3.7; have you installed Audacious yet?])]
 )
 
 CPPFLAGS="$CPPFLAGS $AUDACIOUS_CFLAGS"
