--- a/src/filewriter/Makefile
+++ b/src/filewriter/Makefile
@@ -15,5 +15,5 @@ plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${GTK_CFLAGS} ${FILEWRITER_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${FILEWRITER_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${FILEWRITER_CFLAGS} -I../..
+LIBS += ${GLIB_LIBS} ${FILEWRITER_LIBS}
