Add missing colon.

--- a/configure.ac
+++ b/configure.ac
@@ -1138,7 +1138,7 @@ echo "  Alarm (requires GTK+):                  $USE_GTK"
 echo "  Delete Files:                           $USE_GTK_OR_QT"
 echo "  GNOME Shortcuts:                        $have_gnomeshortcuts"
 echo "  libnotify OSD:                          $have_notify"
-echo "  Linux Infrared Remote Control (LIRC)    $have_lirc"
+echo "  Linux Infrared Remote Control (LIRC):   $have_lirc"
 echo "  MPRIS 2 Server:                         $have_mpris2"
 echo "  Scrobbler 2.0 (requires GTK+):          $have_scrobbler2"
 echo "  Song Change:                            $have_songchange"
