--- a/src/skins-qt/Makefile
+++ b/src/skins-qt/Makefile
@@ -30,7 +30,8 @@ SRCS = actions.cc \
        vis-callbacks.cc \
        vis.cc \
        widget.cc \
-       window.cc
+       window.cc \
+       ../ui-common/menu-ops.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
