gtkui, skins: Rewrite clipboard support.

--- a/src/gtkui/Makefile
+++ b/src/gtkui/Makefile
@@ -10,7 +10,8 @@ SRCS = columns.cc \
        ui_statusbar.cc \
        playlist_util.cc \
        settings.cc \
-       ../ui-common/menu-ops.cc
+       ../ui-common/menu-ops.cc \
+       ../ui-common/menu-ops-gtk.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
