Move more code to ui-common/.

--- a/src/qtui/Makefile
+++ b/src/qtui/Makefile
@@ -13,7 +13,8 @@ SRCS = qtui.cc \
        tool_bar.cc \
        time_slider.cc \
        settings.cc \
-       ../ui-common/menu-ops.cc
+       ../ui-common/menu-ops.cc \
+       ../ui-common/menu-ops-qt.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
