--- a/src/skins-qt/Makefile
+++ b/src/skins-qt/Makefile
@@ -31,7 +31,8 @@ SRCS = actions.cc \
        vis.cc \
        widget.cc \
        window.cc \
-       ../ui-common/menu-ops.cc
+       ../ui-common/menu-ops.cc \
+       ../ui-common/menu-ops-qt.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
