--- a/src/skins-qt/Makefile
+++ b/src/skins-qt/Makefile
@@ -30,9 +30,7 @@ SRCS = actions.cc \
        vis-callbacks.cc \
        vis.cc \
        widget.cc \
-       window.cc \
-       ../ui-common/menu-ops.cc \
-       ../ui-common/menu-ops-qt.cc
+       window.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
