Fix compiler warnings.

--- a/src/adplug/Makefile
+++ b/src/adplug/Makefile
@@ -64,5 +64,6 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
-CXXFLAGS += ${PLUGIN_CFLAGS} -Wno-sign-compare
+# FIXME: Turning off warnings for now; this code is awful
+CXXFLAGS += ${PLUGIN_CFLAGS} -Wno-sign-compare -Wno-misleading-indentation
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../.. -I./core -I./binio
